fixed brand pngs and centered CTA on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -827,6 +827,9 @@ th {
 .section-title {
 	padding-bottom: 70px;
 }
+.schedule-call-btn-div {
+	padding-top: 1rem;
+}
 .schedule-call-btn {
 	background: black;
 	border: 1px solid #080808;
@@ -1366,11 +1369,11 @@ th {
 }
 
 .brand-logo {
-	object-fit: scale-down;
+	padding-top: 12px;
 	margin-left: auto;
 	margin: auto;
-	width: 15vw;
-	height: 6vw;
+	width: 80%;
+	height: 100%;
 }
 .brand-logo-container {
 	background-color: #cccccc;
